<resources>
    <string name="app_name">Movie</string>
    <string name="header_text">Movies list</string>
    <string name="PG">13+</string>
    <string name="storyline_header">Storyline</string>
    <string name="storyline_content">After the devastating events of Avengers: Infinity War,
        the universe is in ruins. With the help of remaining allies,
        the Avengers assemble once more in order to reverse Thanos actions and
        restore balance to the universe.</string>
    <string name="avengers_end_game">Avengers: \nEnd Game</string>
    <string name="avengers_end_game_item">Avengers: End Game</string>
    <string name="avengers_genres">Action, Adventure, Fantasy</string>
    <string name="avengers_reviews_count">125 Reviews</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="tv_back">Back</string>
    <string name="avengers_time">137 MIN</string>
    <string name="reviews_count_template">%d Reviews</string>
    <string name="minimumAge_template">%d+</string>
    <string name="duration_template">%d MIN</string>
    <string name="notification_text">New films have appeared. You will love it!</string>
    <string name="recommendation_channel_name">Recommendation channel</string>
    <string name="recommendation_channel_description">Shows New Top Rated Movies</string>
    <string name="permission_dialog_explanation_text">Calendar write permission is required to add a movie reminder to your calendar</string>
    <string name="permission_dialog_denied_text">This feature is not available without permission to read the calendar. Open Application Settings?</string>
    <string name="dialog_positive_button">OK</string>
    <string name="dialog_negative_button">Cancel</string>
    <string name="reminder_title">Movie reminder</string>
    <string name="reminder_description">You wanted to see a movie - %s</string>
    <string name="movie_detail_transition_name">movie_detail_transition_name</string>
</resources>