<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoviesDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RatingBar
            android:id="@+id/detailsRatingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:numStars="5"
            android:rating="4"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/tvDetailsReviewsCount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailsGenres" />

        <ImageView
            android:id="@+id/imageDetailsPoster"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avengers_header_poster" />

        <TextView
            android:id="@+id/tvDetailsAgeRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="226dp"
            android:background="@drawable/rating_bg"
            android:text="@string/PG"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDetailsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:text="@string/avengers_end_game"
            android:textColor="#ECECEC"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailsAgeRating" />

        <TextView
            android:id="@+id/tvDetailsGenres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/avengers_genres"
            android:textColor="@color/radical_red"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailsTitle" />

        <TextView
            android:id="@+id/tvDetailsReviewsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/avengers_reviews_count"
            android:textAllCaps="true"
            android:textColor="@color/gray"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/detailsRatingBar"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailsGenres" />

        <TextView
            android:id="@+id/tvDetailsStoryline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/storyline_header"
            android:textColor="#ECECEC"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailsReviewsCount" />

        <TextView
            android:id="@+id/tvDetailsStorylineContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/storyline_content"
            android:textColor="@color/dim_75_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailsStoryline"
            app:lineHeight="20sp" />

        <TextView
            android:id="@+id/tvDetailsCast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailsStorylineContent" />

        <ImageView
            android:id="@+id/imgChrisEvans"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toTopOf="@+id/tvChrisEvans"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/imgMarkRuffalo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imgRobertDowneyJr"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailsCast"
            app:srcCompat="@drawable/chris_evans" />


        <ImageView
            android:id="@+id/imgMarkRuffalo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toTopOf="@+id/tvMarkRuffalo"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/imgChrisHemsworth"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imgChrisEvans"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailsCast"
            app:srcCompat="@drawable/mark_ruffalo" />

        <ImageView
            android:id="@+id/imgChrisHemsworth"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toTopOf="@+id/tvChrisHemsworth"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@+id/tvDetailsCast"
            app:layout_constraintStart_toEndOf="@+id/imgMarkRuffalo"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailsCast"
            app:srcCompat="@drawable/chris_hemsworth" />

        <ImageView
            android:id="@+id/imgRobertDowneyJr"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintBottom_toTopOf="@+id/tvRobertDowneyJr"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/imgChrisEvans"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/tvDetailsCast"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailsCast"
            app:layout_constraintVertical_chainStyle="spread"
            app:srcCompat="@drawable/robert_downey" />

        <TextView
            android:id="@+id/tvRobertDowneyJr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/robert_downey_jr"
            app:layout_constraintEnd_toEndOf="@+id/imgRobertDowneyJr"
            app:layout_constraintStart_toStartOf="@+id/imgRobertDowneyJr"
            app:layout_constraintTop_toBottomOf="@+id/imgRobertDowneyJr" />

        <TextView
            android:id="@+id/tvChrisEvans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/chris_evans"
            app:layout_constraintEnd_toEndOf="@+id/imgChrisEvans"
            app:layout_constraintStart_toStartOf="@+id/imgChrisEvans"
            app:layout_constraintTop_toBottomOf="@+id/imgChrisEvans" />

        <TextView
            android:id="@+id/tvMarkRuffalo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/mark_ruffalo"
            app:layout_constraintEnd_toEndOf="@+id/imgMarkRuffalo"
            app:layout_constraintStart_toStartOf="@+id/imgMarkRuffalo"
            app:layout_constraintTop_toBottomOf="@+id/imgMarkRuffalo" />

        <TextView
            android:id="@+id/tvChrisHemsworth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/chris_hemsworth"
            app:layout_constraintEnd_toEndOf="@+id/imgChrisHemsworth"
            app:layout_constraintStart_toStartOf="@+id/imgChrisHemsworth"
            app:layout_constraintTop_toBottomOf="@+id/imgChrisHemsworth" />

        <LinearLayout
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="59dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_back" />

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/tv_back"
                android:textColor="@color/dim_50_white"
                app:layout_constraintBottom_toBottomOf="@+id/imgBack"
                app:layout_constraintStart_toEndOf="@+id/imgBack"
                app:layout_constraintTop_toTopOf="@+id/imgBack" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

