<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvMovieItem"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginBottom="12dp"
    app:cardBackgroundColor="#00FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:background="@drawable/card_bg">

        <ImageView
            android:id="@+id/imgItemPoster"
            android:layout_width="166dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avengers_card_poster"
            tools:ignore="ContentDescription" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rating_bg"
            android:paddingStart="1dp"
            android:paddingEnd="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvItemAgeRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/rating_bg"
                android:text="@string/PG"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </FrameLayout>

        <ImageView
            android:id="@+id/ivItemFavorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_like_empty"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvItemGenres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="214dp"
            android:layout_marginEnd="14dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/avengers_genres"
            android:textColor="@color/radical_red"
            android:textSize="8sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RatingBar
            android:id="@+id/itemRatingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:numStars="5"
            android:rating="4"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/tvItemReviewsCount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItemGenres" />

        <TextView
            android:id="@+id/tvItemReviewsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/avengers_reviews_count"
            android:textAllCaps="true"
            android:textColor="@color/gray"
            android:textSize="8sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/itemRatingBar"
            app:layout_constraintTop_toBottomOf="@+id/tvItemGenres" />

        <TextView
            android:id="@+id/tvItemTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:text="@string/avengers_end_game_item"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgItemPoster" />

        <TextView
            android:id="@+id/tvItemReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/avengers_time"
            android:textColor="@color/gray"
            android:textSize="8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItemTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>